# AlARM

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  readme.md
.github/workflows/: ci.yml
application/AlARM/: CMakeLists.txt
application/AlARM/inc/: AlARM.h
application/AlARM/lib/: AlARMlib.h
application/AlARM/src/: AlARM.cpp
application/AlARM/test/: AlARM_t.cpp  CMakeLists.txt
application/AlarmThread/: AlarmThread.cpp  CMakeLists.txt
application/Audio/: CMakeLists.txt
application/Audio/AudioFake/: AudioFake.cpp  AudioFake.h  CMakeLists.txt
application/Audio/inc/: AudioI.h
application/Audio/test/: AudioFake_t.cpp  CMakeLists.txt
application/AudioTest/: CMakeLists.txt
application/AudioTest/inc/: AudioI.h  AudioTest.h
application/AudioTest/src/: AudioTest.cpp
application/NameString/: CMakeLists.txt
application/NameString/inc/: NameString.h
application/NameString/src/: NameString.cpp
coverage-html/: index.AlARM.cpp.d379ccae081dcadc1796c9b7509b6486.html  index.AlARM.h.6a988dabb7811831bbbed9f827b90473.html  index.AlarmThread.cpp.43b8aafe159d8fe9af4ba1c7efae5588.html  index.AudioI.h.59248822874830e486ca0bcc2370c43f.html  index.NameString.h.79a81f590a8d23c6d6b48c62695a8c81.html  index.html
inc/: AlARM.h  NameString.h
src/: AlARM.cpp  CMakeLists.txt
test/: AlARM_app.cpp  AlARM_app_t.cpp  AlARM_t.cpp  CMakeLists.txt
